Minor packaging change. No functionality changes were made. Removed useless ST file.

--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>6.0~b2: July 31st, 2017</label>
+				<fieldset>
+					<div><label>Minor packaging change. No functionality changes were made.</label></div>
+				</fieldset>
 				<label>6.0~b1: February 13th, 2017</label>
 				<fieldset>
 					<div><label>Return the public "Apple iPhone OS Application Signing" intermediate certificate instead of `kSecMagicBytes` on iOS 10 to avoid a Security.framework crash — thanks JulioVerne!</label></div>
