Update changelogs and associated files for when release is ready.

--- a/appinst/changelog-inline.html
+++ b/appinst/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>1.1: 2018/02/01</label>
+				<fieldset>
+					<div><label>Added compatibility with iOS 11.</label></div>
+				</fieldset>
 				<label>1.0: 2017/09/21</label>
 				<fieldset>
 					<div><label>Refactored many parts of appinst's code and removed many things that are no longer in use.</label></div>
