--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>6.1: 2018/02/01</label>
+				<fieldset>
+					<div><label>Added compatibility with iOS 11.</label></div>
+				</fieldset>
 				<label>6.0.1: 2017/09/21</label>
 				<fieldset>
 					<div><label>Re-enabled `asu_inject` on 32-bit devices running the Phœnix iOS 9.3.5 jailbreak to work around a bug where rebooting and kickstarting the jailbreak would cause AppSync Unified to cease to function.</label></div>
