--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,7 +1,8 @@
 			<panel>
-				<label>6.1: 2018/02/01</label>
+				<label>6.1: 2018/02/26</label>
 				<fieldset>
 					<div><label>Added compatibility with iOS 11.</label></div>
+					<div><label>Fixed a (benign) bug where `asu_inject` would get erroneously enabled on some 32-bit devices.</label></div>
 				</fieldset>
 				<label>6.0.1: 2017/09/21</label>
 				<fieldset>
