Artificially bumped version number up to 9.0 to work around a fake version "8.2" package floating around a piracy repo. Please do not use AppSync Unified for piracy.

--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>9.0: 2018/02/28</label>
+				<fieldset>
+					<div><label>Artificially bumped version number up to 9.0 to work around a fake version "8.2" package floating around a piracy repo. Please do not use AppSync Unified for piracy.</label></div>
+				</fieldset>
 				<label>6.1: 2018/02/26</label>
 				<fieldset>
 					<div><label>Added compatibility with iOS 11.</label></div>
