--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,7 +1,7 @@
 			<panel>
 				<label>9.0: 2018/02/28</label>
 				<fieldset>
-					<div><label>Artificially bumped version number up to 9.0 to work around a fake version "8.2" package floating around a piracy repo. Please do not use AppSync Unified for piracy.</label></div>
+					<div><label>Artificially bumped version number to 9.0 to solve installation issues caused by certain third-party piracy repos making an unofficial modification with a version number of "8.2". Please do not use AppSync Unified for piracy.</label></div>
 				</fieldset>
 				<label>6.1: 2018/02/26</label>
 				<fieldset>
