--- a/appinst/changelog-inline.html
+++ b/appinst/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>1.1.1: 2018/06/21</label>
+				<fieldset>
+					<div><label>Confirmed compatibility with all supported iOS versions up to iOS 11.3.1.</label></div>
+				</fieldset>
 				<label>1.1: 2018/02/26</label>
 				<fieldset>
 					<div><label>Added compatibility with iOS 11.</label></div>
