--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>24.0: 2018/06/21</label>
+				<fieldset>
+					<div><label>Confirmed compatibility with all supported iOS versions up to iOS 11.3.1.</label></div>
+					<div><label>Artificially bumped version number to 24.0 to override all known third-party modifications of AppSync Unified available from piracy repos that will cause damage to your iOS installation. Please <strong>DO NOT</strong> use AppSync Unified for piracy.</label></div>
+				</fieldset>
 				<label>9.0: 2018/02/28</label>
 				<fieldset>
 					<div><label>Artificially bumped version number to 9.0 to solve installation issues caused by certain third-party piracy repos making an unofficial modification with a version number of "8.2". Please do not use AppSync Unified for piracy.</label></div>
