ASU 30.0 release imminent (iOS 11.4)

--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>30.0: 2018/07/10</label>
+				<fieldset>
+					<div><label>Confirmed compatibility with all supported iOS versions up to iOS 11.4.</label></div>
+					<div><label>Artificially bumped version number to 30.0 to override all known third-party modifications of AppSync Unified available from piracy repos that will cause damage to your iOS installation. Please <strong>DO NOT</strong> use AppSync Unified for piracy.</label></div>
+				</fieldset>
 				<label>24.0: 2018/06/21</label>
 				<fieldset>
 					<div><label>Confirmed compatibility with all supported iOS versions up to iOS 11.3.1.</label></div>
