Explicitly specify iOS deployment target to 5.0 to work around an issue determining default deployment target caused by the recent Theos Makefile cleanup causing compiled binaries to run into an illegal instruction error on iOS 5. (ASU 31.0 / appinst 1.1.2 — Fixed an issue on iOS 5 where AppSync Unified / appinst would not work at all due to an undocumented change in Theos causing default deployment target to be set incorrectly, thus generating binaries that could not be properly run on iOS 5.)

--- a/appinst/changelog-inline.html
+++ b/appinst/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>1.1.2: 2018/07/23</label>
+				<fieldset>
+					<div><label>Fixed an issue on iOS 5 where appinst would not work at all due to an undocumented change in Theos causing default deployment target to be set incorrectly, thus generating binaries that could not be properly run on iOS 5.</label></div>
+				</fieldset>
 				<label>1.1.1: 2018/06/21</label>
 				<fieldset>
 					<div><label>Confirmed compatibility with all supported iOS versions up to iOS 11.3.1.</label></div>
