--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>31.0: 2018/07/23</label>
+				<fieldset>
+					<div><label>Fixed an issue on iOS 5 where AppSync Unified would not work at all due to an undocumented change in Theos causing default deployment target to be set incorrectly, thus generating binaries that could not be properly run on iOS 5.</label></div>
+				</fieldset>
 				<label>30.0: 2018/07/10</label>
 				<fieldset>
 					<div><label>Confirmed compatibility with all supported iOS versions up to iOS 11.4.</label></div>
