Added compatibility with iOS 12.

--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>32.0: 2019/02/24</label>
+				<fieldset>
+					<div><label>Added compatibility with iOS 12 (verified up to 12.1.2).</label></div>
+				</fieldset>
 				<label>31.1: 2018/07/23</label>
 				<fieldset>
 					<div><label>Modified Depends line to properly allow installation on the iOS 11.4 betas, as the previous one apparently does not work for the betas.</label></div>
