ASU 40.0, appinst 1.1.3 with arm64e support.

--- a/appinst/changelog-inline.html
+++ b/appinst/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>1.1.3: 2019/05/27</label>
+				<fieldset>
+					<div><label>Added compatibility with arm64e SoCs (A12/A12X).</label></div>
+					<div><label>Updated URLs where relevant to reflect my new domain (akemi.ai).</label></div>
+				</fieldset>
 				<label>1.1.2: 2018/07/23</label>
 				<fieldset>
 					<div><label>Fixed an issue on iOS 5 where appinst would not work at all due to an undocumented change in Theos causing default deployment target to be set incorrectly, thus generating binaries that could not be properly run on iOS 5.</label></div>
