--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>40.0: 2019/05/27</label>
+				<fieldset>
+					<div><label>Added compatibility with arm64e SoCs (A12/A12X).</label></div>
+					<div><label>Updated URLs where relevant to reflect my new domain (akemi.ai).</label></div>
+				</fieldset>
 				<label>32.0: 2019/02/24</label>
 				<fieldset>
 					<div><label>Added compatibility with iOS 12 (verified up to 12.1.2).</label></div>
