--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,7 +1,11 @@
 			<panel>
+				<label>41.0-NoA12: 2019/08/15</label>
+				<fieldset>
+					<div><label>Added compatibility with iOS 12.1.x, 12.2.x, and 12.3 beta for all devices <strong>EXCEPT A12 devices</strong>.</label></div>
+				</fieldset>
 				<label>40.0: 2019/05/27</label>
 				<fieldset>
-					<div><label>Added compatibility with arm64e SoCs (A12/A12X).</label></div>
+					<div><label><strike style="text-decoration: line-through;">Added compatibility with arm64e SoCs (A12/A12X).</strike></label></div>
 					<div><label>Updated URLs where relevant to reflect my new domain (akemi.ai).</label></div>
 				</fieldset>
 				<label>32.0: 2019/02/24</label>
