--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>41.1-NoA12: 2019/08/19</label>
+				<fieldset>
+					<div><label>Added compatibility with iOS 12.4 for all devices <strong>EXCEPT A12 devices</strong>.</label></div>
+				</fieldset>
 				<label>41.0-NoA12: 2019/08/15</label>
 				<fieldset>
 					<div><label>Added compatibility with iOS 12.1.x, 12.2.x, and 12.3 beta for all devices <strong>EXCEPT A12 devices</strong>.</label></div>
