Updated changelogs and other misc files.

--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>48.0-NoChimera: 2019/10/23</label>
+				<fieldset>
+					<div><label>Finally added compatibility with A12 (arm64e) devices running the unc0ver jailbreak! <strong>(Chimera is NOT supported at this time due to technical restraints.)</strong></label></div>
+				</fieldset>
 				<label>41.1-NoA12: 2019/08/19</label>
 				<fieldset>
 					<div><label>Added compatibility with iOS 12.4 for all devices <strong>EXCEPT A12 devices</strong>.</label></div>
