Block installation on devices running a specific unc0ver fork that also ships with the broken Substitute. Block installation of known fake ASU package, and bump version number up to 60.0. Release 60.0 with full support for Chimera/Electra.

--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>60.0: 2019/10/25</label>
+				<fieldset>
+					<div><label>Finally added full compatibility with all A12 (arm64e) devices running both unc0ver and Chimera!</label></div>
+					<div><label>Fixed an issue where Chimera and Electra users with devices using an A11 or lower SoC would be unable to install AppSync Unified.</label></div>
+				</fieldset>
 				<label>48.0-NoChimera: 2019/10/23</label>
 				<fieldset>
 					<div><label>Finally added compatibility with A12 (arm64e) devices running the unc0ver jailbreak! <strong>(Chimera is NOT supported at this time due to technical restraints.)</strong></label></div>
