--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>64.0: 2019/11/12</label>
+				<fieldset>
+					<div><label>Added compatibility with all iOS 12 and 13 versions up to 13.2.2 for all devices.</label></div>
+				</fieldset>
 				<label>60.0: 2019/10/25</label>
 				<fieldset>
 					<div><label>Finally added full compatibility with all A12 (arm64e) devices running both unc0ver and Chimera!</label></div>
