Fix daemon reloading on iOS 13. Add support for iOS 13.3 beta. Release 65.0.

--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,10 @@
 			<panel>
+				<label>65.0: 2019/11/14</label>
+				<fieldset>
+					<div><label>Fixed a code injection bug causing AppSync Unified to not take effect until after a reboot or ldrestart was performed.</label></div>
+					<div><label>Added compatibility with iOS 13.3 beta for all devices.</label></div>
+					<div><label>Thanks to <a href="https://twitter.com/NikkiNikkiTembo" target="_blank">Nicole</a> for letting me use her iOS 13 devices (D22, N69u) to test!! <3</label></div>
+				</fieldset>
 				<label>64.0: 2019/11/12</label>
 				<fieldset>
 					<div><label>Added compatibility with all iOS 12 and 13 versions up to 13.2.2 for all devices.</label></div>
