--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,10 @@
 			<panel>
+				<label>66.0: 2019/12/05</label>
+				<fieldset>
+					<div><label>Minor update that eliminates the rare case where users with broken versions of Substitute installed would fail a dependency resolution check, prompting their package manager to try and uninstall Substitute along with all their tweaks.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+					<div><label>Thanks to <a href="https://twitter.com/NikkiNikkiTembo" target="_blank">Nicole</a> for letting me use her iOS 13 devices (D22, N69u) to test!! <3</label></div>
+				</fieldset>
 				<label>65.0: 2019/11/14</label>
 				<fieldset>
 					<div><label>Fixed a code injection bug causing AppSync Unified to not take effect until after a reboot or ldrestart was performed.</label></div>
