--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,10 @@
 			<panel>
+				<label>68.0: 2019/12/11</label>
+				<fieldset>
+					<div><label>Minor update that resolves an edge case where users using the Meridian jailbreak on iOS 10 (which uses Substitute and not Substrate) would be unable to install AppSync Unified due to an oversight in the dependency resolution logic.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+					<div><label>Thanks to Jacqueline for notifying me of this bug and for testing the new dependency resolution logic on her Meridian device!</label></div>
+				</fieldset>
 				<label>66.0: 2019/12/05</label>
 				<fieldset>
 					<div><label>Minor update that eliminates the rare case where users with broken versions of Substitute installed would fail a dependency resolution check, prompting their package manager to try and uninstall Substitute along with all their tweaks.</label></div>
