--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>70.0: 2019/12/14</label>
+				<fieldset>
+					<div><label>Fixes an issue where AppSync Unified would sometimes not work for some users that have arm64e (A12/A12X) devices.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>68.0: 2019/12/11</label>
 				<fieldset>
 					<div><label>Minor update that resolves an edge case where users using the Meridian jailbreak on iOS 10 (which uses Substitute and not Substrate) would be unable to install AppSync Unified due to an oversight in the dependency resolution logic.</label></div>
