--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,10 @@
 			<panel>
+				<label>72.0: 2020/03/20</label>
+				<fieldset>
+					<div><label>Add support for iOS 13.4.</label></div>
+					<div><label>Added some more third-party modified package IDs to the Conflicts blacklist.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>70.0: 2019/12/14</label>
 				<fieldset>
 					<div><label>Fixes an issue where AppSync Unified would sometimes not work for some users that have arm64e (A12/A12X) devices.</label></div>
