--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,13 +1,18 @@
 			<panel>
+				<label>76.0: 2020/05/21</label>
+				<fieldset>
+					<div><label>Added support for iOS 13.5.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>74.0: 2020/04/12</label>
 				<fieldset>
-					<div><label>Add support for iOS 13.4.1.</label></div>
+					<div><label>Added support for iOS 13.4.1.</label></div>
 					<div><label>Added some more third-party modified package IDs to the Conflicts blacklist.</label></div>
 					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
 				</fieldset>
 				<label>72.0: 2020/03/20</label>
 				<fieldset>
-					<div><label>Add support for iOS 13.4.</label></div>
+					<div><label>Added support for iOS 13.4.</label></div>
 					<div><label>Added some more third-party modified package IDs to the Conflicts blacklist.</label></div>
 					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
 				</fieldset>
