--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>78.0: 2020/06/14</label>
+				<fieldset>
+					<div><label>Added support for iOS 13.5.1 and 13.5.5~b1.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>76.0: 2020/05/21</label>
 				<fieldset>
 					<div><label>Added support for iOS 13.5.</label></div>
