--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>82.0: 2020/08/14</label>
+				<fieldset>
+					<div><label>Added support for iOS 13.6.1.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>80.0: 2020/06/20</label>
 				<fieldset>
 					<div><label>Added support for iOS 13.6.</label></div>
