--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,14 @@
 			<panel>
+				<label>90.0: 2021/02/11</label>
+				<fieldset>
+					<div><label>Heavily rewrote AppSync Unified to <em>finally</em> add support for all current iOS 14.x versions (14.0 to 14.4). Thank you for remaining patient — a lot of research and work had to be done to make this possible.</label></div>
+					<div><label>Made significant improvements to the fake signing information that AppSync Unified presents to all versions of iOS.</label></div>
+					<div><label>Added code directory hash value (cdhash) calculation support.</label></div>
+					<div><label>AppSync Unified now also bypasses FrontBoard's signature verification functionality.</label></div>
+					<div><label>Fixed a bug where AppSync Unified wouldn't always work properly on iOS 5 and 6 in certain rare cases.</label></div>
+					<div><label>Added a notification during install time telling users to reboot (or ldrestart) if AppSync Unified does not appear to be working immediately after installation.</label></div>
+					<div><label>Fixed a bug where Cydia Substrate would sometimes not be installed when it… should be.</label></div>
+				</fieldset>
 				<label>84.0: 2020/09/02</label>
 				<fieldset>
 					<div><label>Added support for iOS 13.7.</label></div>
