--- a/appinst/changelog-inline.html
+++ b/appinst/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>1.1.4: 2021/02/11</label>
+				<fieldset>
+					<div><label>Various improvements were made to appinst's output.</label></div>
+					<div><label>Fixed a crash that would sometimes occur on iOS 5.</label></div>
+				</fieldset>
 				<label>1.1.3: 2019/05/27</label>
 				<fieldset>
 					<div><label>Added compatibility with arm64e SoCs (A12/A12X).</label></div>
