--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>92.0: 2021/04/02</label>
+				<fieldset>
+					<div><label>Added support for iOS 14.4.2.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>90.0: 2021/02/11</label>
 				<fieldset>
 					<div><label>Heavily rewrote AppSync Unified to <em>finally</em> add support for all current iOS 14.x versions (14.0 to 14.4). Thank you for remaining patient — a lot of research and work had to be done to make this possible.</label></div>
