--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>94.0: 2021/04/30</label>
+				<fieldset>
+					<div><label>Added support for iOS 14.5.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>92.0: 2021/04/02</label>
 				<fieldset>
 					<div><label>Added support for iOS 14.4.2.</label></div>
