--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>100.0: 2021/07/28</label>
+				<fieldset>
+					<div><label>Added support for iOS 14.7 and 14.7.1.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>98.0: 2021/06/01</label>
 				<fieldset>
 					<div><label>Added support for iOS 14.6.</label></div>
