--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>106.0: 2022/12/20</label>
+				<fieldset>
+					<div><label>Added full support for iOS 15.0 〜 16.2.</label></div>
+					<div><label>Added support for the <code>SignerType</code> key to ASU's fake codesigning info dictionary, which is required by iOS 15 and above in order to successfully install fakesigned applications.</label></div>
+				</fieldset>
 				<label>104.0: 2021/11/28</label>
 				<fieldset>
 					<div><label>Added support for iOS 14.8.1.</label></div>
