changelog-inline: Updated changelog.

--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -204,7 +204,7 @@
 				<label>5.3-1: 2014/12/07</label>
 				<fieldset>
 					<div><label>Fixed a bug where users using the TaiG iOS 8.1.1 jailbreak would not get ASU successfully injected into installd at install-time due to com.apple.mobile.installd being in an unexpected location.</label></div>
-					<div><label>Removes other mirrored AppSync Unified packages found on other repositories that cause issues when the user attempts to install net.angelxwind.appsyncunified.</label></div>
+					<div><label>Removes other mirrored AppSync Unified packages found on other repositories that cause issues when the user attempts to install AppSync Unified.</label></div>
 				</fieldset>
 				<label>5.2-1: 2014/11/12</label>
 				<fieldset>
@@ -216,7 +216,7 @@
 				</fieldset>
 				<label>4.5-1: 2014/07/21</label>
 				<fieldset>
-					<div><label>Modified NSLog behaviour to check to see if net.angelxwind.appsyncunified is installed.</label></div>
+					<div><label>Modified NSLog behaviour to check to see if AppSync Unified is installed.</label></div>
 				</fieldset>
 				<label>4.4-1: 2014/07/01</label>
 				<fieldset>
