changelog: Added mention of package ID transition.

--- a/appinst/changelog-inline.html
+++ b/appinst/changelog-inline.html
@@ -12,6 +12,7 @@
 					<div><label>Removed the unnecessary <code>arm64e</code> Mach-O arch slice from the <code>appinst</code> binary.</label></div>
 					<div><label><code>appinst</code> will now always ensure that proper filesystem ownership and permissions are set on its temporary directory in order to prevent any possibility of an app installation failure if <code>appinst</code> was recently previously run as <code>root</code>. (That being said, this is rendered somewhat redundant by the other improvements in 2.0…)</label></div>
 					<div><label><code>appinst</code> will now always proactively clean up its temporary directory after an installation attempt, unlike previous versions which relied on iOS behaviour.</label></div>
+					<div><label>Changed package ID to <code>ai.akemi.appinst</code>.</label></div>
 				</fieldset>
 				<label>1.1.4: 2021/02/11</label>
 				<fieldset>
