--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>108.0: 2023/01/29</label>
+				<fieldset>
+					<div><label>Added support for iOS 16.3.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>106.0: 2022/12/20</label>
 				<fieldset>
 					<div><label>Added full support for iOS 15.0 〜 16.2.</label></div>
