--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,13 @@
 			<panel>
+				<label>112.0: 2023/07/03</label>
+				<fieldset>
+					<div><label>Added support for all iOS versions up to iOS 16.5.1.</label></div>
+					<div><label>Added support for "rootless" mode jailbreaks. ※ Users using the Dopamine jailbreak may encounter issues.</label></div>
+					<div><label>Made many internal refactors and improvements to AppSync Unified's code and associated tooling.</label></div>
+					<div><label>Improved the functionality of <code>asu_inject</code> and added support for <code>inject_criticald</code> for wider jailbreak support. (※ No jailbreak that uses <code>inject_criticald</code> requires the use of <code>asu_inject</code> — this is simply a futureproofing measure.)</label></div>
+					<div><label>Improved documentation regarding userspace reboot.</label></div>
+					<div><label>Removed the <code>arm64e</code> architecture slice from binaries that did not need one.</label></div>
+				</fieldset>
 				<label>110.0: 2023/03/30</label>
 				<fieldset>
 					<div><label>Added support for iOS 16.3.1.</label></div>
