Update changelogs for ASU 114.0 and appinst 2.1.1.

--- a/appinst/changelog-inline.html
+++ b/appinst/changelog-inline.html
@@ -1,4 +1,8 @@
 			<panel>
+				<label>2.1.1: 2023/10/23</label>
+				<fieldset>
+					<div><label>Removed Dopamine warning message, as it is no longer necessary due to Évelyne fixing her ElleKit code injection platform for AppSync Unified. For more information, please see <a href="https://github.com/akemin-dayo/AppSync/issues/174" target="_blank">GitHub issue #174</a>.</label></div>
+				</fieldset>
 				<label>2.1: 2023/07/03</label>
 				<fieldset>
 					<div><label>Added support for "rootless" mode jailbreaks. ※ appinst does NOT currently work with the Dopamine jailbreak due to an IPC issue on that specific jailbreak. [<a href="https://twitter.com/akemin_dayo/status/1672982839405723651" target="_blank">Twitter</a>] [<a href="https://main.elk.zone/mstdn.jp/@akemin_dayo@mstdn.jp/110605445960091417" target="_blank">Fediverse</a>] [<a href="https://bsky.app/profile/akemin-dayo.akemi.ai/post/3jyypxpxxpk25" target="_blank">Bluesky</a>]</label></div>
