--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,10 @@
 			<panel>
+				<label>114.0: 2023/10/23</label>
+				<fieldset>
+					<div><label>Added support for all iOS versions up to iOS 16.7.</label></div>
+					<div><label>AppSync Unified now requires ElleKit 1.1 or newer to be installed on "rootless" mode jailbreaks, as earlier versions are incompatible with AppSync Unified (and perhaps other tweaks) due to a bug. For more information, please see <a href="https://github.com/akemin-dayo/AppSync/issues/174" target="_blank">GitHub issue #174</a>. <strong>Thanks to Évelyne for her hard work in fixing ElleKit!</strong></label></div>
+					<div><label>No actual changes were made to AppSync Unified in order to achieve this, but AppSync Unified will now work with all known "rootless" mode jailbreaks as long as the requisite version of ElleKit is installed.</label></div>
+				</fieldset>
 				<label>112.0: 2023/07/03</label>
 				<fieldset>
 					<div><label>Added support for all iOS versions up to iOS 16.5.1.</label></div>
