--- a/changelog-inline.html
+++ b/changelog-inline.html
@@ -1,4 +1,9 @@
 			<panel>
+				<label>116.0: 2024/11/28</label>
+				<fieldset>
+					<div><label>Added support for all iOS versions up to iOS 18.2.</label></div>
+					<div><label>No other changes were made to AppSync Unified's functionality or code.</label></div>
+				</fieldset>
 				<label>114.0: 2023/10/23</label>
 				<fieldset>
 					<div><label>Added support for all iOS versions up to iOS 16.7.</label></div>
